# promodeagro-mcp

./: .cursorrules  .gitignore  CURSOR_SETUP.md  Dockerfile  PROJECT_MCP_SETUP.md  README.md  build.sh  debug_products.py  docker-compose.yml  mcp-config.json  mcp_http_server.py  mcp_stdio_server.py  nginx.conf  pyproject.toml  rebuild-and-test.sh  requirements.txt  setup.py  setup_project.py  show_catalog.py  start-mcp-server.sh  verify_database.py
.cursor/: mcp.json
.cursor/rules/: project-rule.mdc  senior-engineer-task-execution.md
.github/workflows/: deploy-dev.yml  deploy-prod.yml  deploy-stage.yml  deploy.yml  docker-build.yml  pr-validation.yml
deploy/: .env.dev  .env.example  .env.prod  .env.stage  README.md  SSL_MANAGEMENT.md  assume-role-to-profile.sh  build-and-deploy.sh  cdk-full-permissions-with-route53.json  cdk-minimal-permissions.json  cdk-permissions-policy.json  cdk.context.json  cdk.json  cleanup-stacks.sh  cloudformation-backend-template.yaml  cloudformation-domain-template.yaml  cloudformation-global-template.yaml  cloudformation-main-template.yaml  deploy.sh  package-lock.json  package.json  smart-bootstrap.sh  tsconfig.json
deploy/config/: dev.conf  environments.ts  stage.conf
deploy/git-workflow/: GITHUB_WORKFLOWS_README.md  (+7 more)
deploy1/: README.md  aws-deployment-options.md  check-aws-permissions.sh  cleanup-stacks.sh  cloudformation-global-template.yaml  cloudformation-regional-template.yaml  cloudformation-template.yaml  cloudfront-lambda-edge.js  cognito-stack.yaml  deploy-cognito.sh  deploy.sh  environment-setup.md  simple-build-deployment.md  update-bucket-policy.sh  verify-deployment.sh
deploy2/: build-and-deploy.sh  cloudformation-backend-template.yaml  cloudformation-domain-template.yaml  cloudformation-global-template.yaml  cloudformation-main-template.yaml  cloudformation-network-template.yaml  cloudformation-storage-template.yaml  deploy.sh  verify-deployment.sh
diag/: CURSOR_TROUBLESHOOTING.md  MCP_TROUBLESHOOTING.md  README.md  diagnose  mcp-doctor.sh  mcp_diagnostics.py  pytest.ini  test-stdio-mcp.sh  verify_database.py
examples/: ecommerce_tools_usage.py
generator/: DASHBOARD_README.md  README.md  call_analysis_dashboard.sh  call_data_generator.py  clean_all_s3_data.sh  cleanup_s3_data.py  config.py  create_athena_table.sql  generate_sample_data.sh  requirements.txt  sample_queries.sql  setup_athena_table.py  setup_athena_table.sh
help/: prompts.md
integration/: mcp-http-connector.py
notebooks/: exploratory_analysis.ipynb
src/: consts.py  server.py
tests/: conftest.py  run_tests.py  test_deliver_order_model.py  test_deliver_order_service.py  test_deliver_order_tool.py  test_ecommerce_models.py  test_ecommerce_service.py  test_ecommerce_tools.py  test_http_server.py  test_logger.py  test_mcp_integration.py
(+48 files in other folders)
